# teamviewer-monitor

./: .gitignore  Cargo.toml
src/: main.rs
static/: main.js  master.css
templates/: base.html  index.html
