[package]
name = "teamviewer-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = { version = "0.3.0", features = ["serde-json"] }
axum = "0.6.20"
chrono = { version = "0.4.26", default-features = false, features = ["serde", "clock"] }
listenfd = "1.0.1"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.183", features = ["derive"] }
tokio = { version = "1.30.0", features = ["rt", "macros"] }
tower-http = { version = "0.4.3", features = ["fs"] }
